# aoc2022

./: .gitignore  CMakeLists.txt  aoc2022.code-workspace  readme.md
cmake/: CompileCommands.cmake  DefaultBuildType.cmake  DefaultInstallPath.cmake  DefineWindows.cmake  ForceUnicode.cmake  HideVSCodeVars.cmake
day01/: CMakeLists.txt
day01/include/: CMakeLists.txt
day01/src/: CMakeLists.txt  main.cpp
day01a/: CMakeLists.txt
day01a/include/: CMakeLists.txt
day01a/src/: CMakeLists.txt  main.cpp
day02/: CMakeLists.txt
day02/include/: CMakeLists.txt  main.h
day02/src/: CMakeLists.txt  main.cpp
day03/: CMakeLists.txt
day03/include/: CMakeLists.txt  main.h
day03/src/: CMakeLists.txt  main.cpp
day04/: CMakeLists.txt
day04/include/: CMakeLists.txt  main.h
day04/src/: CMakeLists.txt  main.cpp
day05/: CMakeLists.txt
day05/include/: CMakeLists.txt  main.h
day05/src/: CMakeLists.txt  main.cpp
day06/: CMakeLists.txt
day06/include/: CMakeLists.txt  main.h
day06/src/: CMakeLists.txt  main.cpp
day07/: CMakeLists.txt
day07/include/: CMakeLists.txt  aocfile.h  dir.h  inode.h  main.h
day07/src/: CMakeLists.txt  dir.cpp  main.cpp
day08/: CMakeLists.txt
day08/include/: CMakeLists.txt  main.h  scnmap.h  vizmap.h
day08/src/: CMakeLists.txt  main.cpp
day09/: CMakeLists.txt
day09/include/: CMakeLists.txt  rope.h
day09/src/: CMakeLists.txt  main.cpp
day10/: CMakeLists.txt
day10/include/: CMakeLists.txt  main.h
day10/src/: CMakeLists.txt  main.cpp
day11/: CMakeLists.txt
day11/include/: CMakeLists.txt  monkeys place value.h  monkeys.h
day11/src/: CMakeLists.txt  main.cpp
day12/: CMakeLists.txt
day12/include/: CMakeLists.txt  topomap.h
day12/src/: CMakeLists.txt  main.cpp
day13/: CMakeLists.txt
day13/include/: CMakeLists.txt  packet.h
day13/src/: CMakeLists.txt  main.cpp  packet.cpp
day14/: CMakeLists.txt
day14/include/: CMakeLists.txt  sand.h
day14/src/: CMakeLists.txt  main.cpp
day15/: CMakeLists.txt  input.txt
day15/include/: CMakeLists.txt  sensormap.h
day15/src/: CMakeLists.txt  main.cpp
day16/: CMakeLists.txt
day16/include/: CMakeLists.txt  valves.h
day16/src/: CMakeLists.txt  main.cpp
day17/: CMakeLists.txt
day17/include/: CMakeLists.txt  tetris.h
day17/src/: CMakeLists.txt  main.cpp
day18/: CMakeLists.txt
day18/include/: CMakeLists.txt  cube.h
day18/src/: CMakeLists.txt  main.cpp
day19/: CMakeLists.txt  reddit hint bp2.txt
day19/include/: CMakeLists.txt  factory.h
day19/src/: CMakeLists.txt  main.cpp
day1a/: CMakeLists.txt
day1a/include/: CMakeLists.txt  main.h
day1a/src/: CMakeLists.txt  main.cpp
day20/: CMakeLists.txt
day20/include/: CMakeLists.txt  ring.h
day20/src/: CMakeLists.txt  main.cpp
day21/: CMakeLists.txt
day21/include/: CMakeLists.txt  monkcalc.h
day21/src/: CMakeLists.txt  main.cpp
day22/: CMakeLists.txt
day22/include/: CMakeLists.txt  forcefield.h  uvcube.h
day22/src/: CMakeLists.txt  main.cpp
day23/: CMakeLists.txt
day23/include/: CMakeLists.txt  elfmap.h  elfsim.h
day23/src/: CMakeLists.txt  main.cpp
day24/: CMakeLists.txt  input.txt
day24/include/: CMakeLists.txt  blizzard.h
day24/src/: CMakeLists.txt  main.cpp
day25/: CMakeLists.txt
day25/include/: CMakeLists.txt  snafu.h
day25/src/: CMakeLists.txt  main.cpp
