add_executable(day1a)  # WIN32)
target_compile_definitions(day1a PUBLIC "WIN32;_WINDOWS")
# for VS, set the startup target (the one that starts in debugger by default)
set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT day1a)
if (MINGW)
  target_compile_options(day1a PUBLIC -mwindows -std=c++20)
endif()

add_subdirectory(include)
add_subdirectory(src)
